Fixed short pages causing header/content/footer to have spacing inbetween

--- a/css/main.scss
+++ b/css/main.scss
@@ -56,15 +56,7 @@ body {
 }
 
 #site{
-    display: flex;
     min-height: 100vh;
-    flex-direction: column;
-    flex: 1 0 auto;
-    flex-flow: row wrap;
-}
-
-#site > *{
-    flex: 1 100%;
 }
 
 strong {
